--- a/How-it-works/index.html
+++ b/How-it-works/index.html
@@ -4,33 +4,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Double Tap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="./main.css">
-  <nav class="m-4">
-    <!-- <div class="m-4"> -->
-    <img src="Logo-1@2x.png" width="212" height="51" />
-    <a href="" class="link-text">Home</a>
-    <a href="" class="link-text">Features</a>
-    <a href="" class="link-text">Pricing</a>
-    <a href="" class="link-text">How it Works</a>
-    <a href="" class="link-text">Support</a>
-    <button class="btn btn-outline-primary me-md-2 md-end fw-bold" type="button">Sign In</button>
-    <button class="btn btn-primary btn-Bcolor md-end fw-bold" type="button">Try It Free</button>
-    <!-- </div> -->
 
-
-  </nav>
 </head>
 
 <body>
+  <header>
+    <nav class="m-4">
+      <!-- <div class="m-4"> -->
+      <img src="Logo-1@2x.png" width="212" height="51" />
+      <a href="" class="link-text">Home</a>
+      <a href="" class="link-text">Features</a>
+      <a href="" class="link-text">Pricing</a>
+      <a href="" class="link-text">How it Works</a>
+      <a href="" class="link-text">Support</a>
+      <button class="btn btn-outline-primary me-md-2 md-end fw-bold" type="button">Sign In</button>
+      <button class="btn btn-primary btn-Bcolor md-end fw-bold" type="button">Try It Free</button>
+      <!-- </div> -->
+
+
+    </nav>
+  </header>
   <div class="container" style="font-family: Arial, Helvetica, sans-serif;">
     <div class="row m-4">
       <div class="col-6 mt-5" style="font-family: Arial, Helvetica, sans-serif;">
         <h1 class="fw-bold h1-txtsz">Focus on</h1>
         <h1 class="fw-bold h1-txtsz">Your Business</h1>
-        <h5 class="fw-bold">Let Us Handle Everything Else</h5>
+        <h1 class="fw-bold">Let Us Handle Everything Else</h1>
         <h6 class="fw-bold sub-text">Subscription Billing, powered with revenue retention tools and a</h6>
         <h6 class="fw-bold sub-text">seamless customer experience - without the technical hurdles.</h6>
         <button type="button" for="sign-in" class="btn btn-primary btn-lg fw-bold btn-Bcolor">Sign Up Free >></button>
@@ -45,62 +48,66 @@
         <img src="Header-Side-1.png" alt="buttons" width="599" height="697" />
       </div>
     </div>
-    <div class="row m-4">
-      <hr class="m-4">
-      <h6 class="text-center fw-bold" style="font-family: Arial, Helvetica, sans-serif;">How it Works</h6>
-      <div>
-        <h6 class="text-center fw-bold" style="font-family: Arial, Helvetica, sans-serif;">Lorem Ipsum is simply dummy
+    <hr class="m-4">
+    <div class="row m-4" style="padding: 9%;">
+
+      <h5 class="text-center fw-bold" style="font-family: Arial, Helvetica, sans-serif;">How it Works</h5>
+      <div class="col-3"></div>
+      <div class="col-6">
+        <h5 class="text-center fw-bold" style="font-family: Arial, Helvetica, sans-serif;">Lorem Ipsum is simply dummy
           text of the
           printing and typesetting industry. Lorem Ipsum
           has been the industry's standard dummy text
           ever since the 1500s, when an unknown printer
-          took a galley of type and scrambled it to make a</h6>
+          took a galley of type and scrambled it to make a</h5>
       </div>
     </div>
     <div class="row">
       <div class="col-5">
         <img src="Collect-info@2x.png" width="443" height="364" alt="buttons" />
       </div>
-      <div class="col-6 text-color fw-bold back-color" style="font-family: Arial, Helvetica, sans-serif;">
-        <h5>Collect Useful Info</h5>
+      <div class="col-6 text-color fw-bold back-color"
+        style="font-family: Arial, Helvetica, sans-serif; border-radius: 5%;">
+        <h5 class="text-center" style="padding: 9%;">Collect Useful Info</h5>
         <p>Deliver the world of payment options and seamless checkout experiences, making it easy for your customers to
           pay you for your products and services.</p>
       </div>
     </div>
-    <div class="row m-4">
-      <h6 class="text-center fw-bold" style="font-family: Arial, Helvetica, sans-serif;">Lorem Ipsum is simply dummy
-        text of the
-        printing and typesetting industry. Lorem Ipsum
-        has been the industry's standard dummy text
-        ever since the 1500s, when an unknown printer
-        took a galley of type and scrambled it to make a</h6>
-    </div>
-    <div class="row">
-      <!-- <div class="container-fluid box-round" width="1456" height="748"> -->
+    <div class="row m-4" style="padding: 9%;">
+      <div class="col-3"></div>
       <div class="col-6">
+        <h5 class="text-center fw-bold" style="font-family: Arial, Helvetica, sans-serif;">Lorem Ipsum is simply dummy
+          text of the
+          printing and typesetting industry. Lorem Ipsum
+          has been the industry's standard dummy text
+          ever since the 1500s, when an unknown printer
+          took a galley of type and scrambled it to make a</h5>
+      </div>
+    </div>
+    <div class="row" style="margin-bottom: 9%;">
+      <div class="col-5">
         <img class="img-fluid" src="Take Payments@2x.png" alt="buttons" id="tak-pay-img" />
         <!-- width="425" height="545" -->
       </div>
-      <div class="col-6 text-color fw-bold back-color" style="font-family: Arial, Helvetica, sans-serif;">
-        <h5>Get Paid Sooner</h5>
+      <div class="col-6 text-color fw-bold back-color"
+        style="font-family: Arial, Helvetica, sans-serif; border-radius: 5%;">
+        <h5 class="text-center" style="padding: 9%;">Get Paid Sooner</h5>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
           industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
           scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
           electronic typesetting, remaining essentially unchanged.</p>
       </div>
-      <!-- </div> -->
     </div>
   </div>
   <footer class="back-color">
     <h1 class="text-center text-color fw-bold" style="font-family: Arial, Helvetica, sans-serif;">Try Double Tap Today!
     </h1>
     <h5 class="text-center text-color" style="font-family: Arial, Helvetica, sans-serif;">Let's Get Started</h5>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-center"
-      style="padding-left: 661px; padding-top: 30px; padding-right: 661px;">
+    <div class="d-grid gap-2 d-md-flex justify-content-md-center" style="padding-top: 30px;">
       <button id="gs-btn" type="button" class="btn btn-success btn-lg fw-bold">Get Started >></button>
       <button id="cwu-btn" type="button" class="btn btn-light btn-lg fw-bold">Chat With Us</button>
     </div>
-    <div style="padding-bottom: 171px; padding-top: 62px; padding-left: 680px; padding-right: 620px;">
+    <div class="text-center" style="padding-bottom: 151px; padding-top: 62px;">
 
       <img src="Free -1.png" alt="image">
       <img src="Ellipse -1.png" alt="" width="13" height="14px">
