--- a/sign-in/sign-in.html
+++ b/sign-in/sign-in.html
@@ -6,35 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sign In</title>
   <link rel="stylesheet" href="Sign.css">
-  <div class="start-up">Don't Have an Account Yet?<br>What are you waiting for? Let's fix that now!</div>
-  <button type="button" class="btn-head">Sign-Up</button>
+  <div class="oval"></div>
 </head>
 
 <body>
-<section="container">
-<section class="column1"> </section>
-<section class="column2"><h1>Sign In</h1></section>
-  <div class="input-group">
-    <span class="input-group-text"></span>
-    <div class="form-floating">
-      <input type="text" class="form-fill" id="floatingInputGroup1" placeholder="Username">
-    </div>
+  <div class="container">
+    <section class="column1">
+      <div class="box"></div>
+      </style>
+      <div class="start-up">Don't Have an Account Yet?<br>What are you waiting for? Let's fix that now!</div>
+      <button type="button" class="btn-head">Sign-Up</button>
+    </section>
+    <section class="column2">
+      <h1 class="main">Sign In</h1>
+      <div class="input-group">
+        <span class="input-group-text"></span>
+        <div class="form-floating">
+          <input type="text" class="form-fill" id="floatingInputGroup1" placeholder="Username">
+        </div>
+      </div>
+      <div class="input-group">
+        <span class="input-group-text"></span>
+        <div class="form-floating">
+          <input type="text" class="form-fill" id="floatingInputGroup1" placeholder="Email">
+        </div>
+      </div>
+      <div class="input-group">
+        <span class="input-group-text"></span>
+        <div class="form-floating">
+          <input type="password" class="form-fill" id="floatingInputGroup1" placeholder="Password">
+      </div>
+        <footer>
+        <button class="Sign-In" type="submit">Sign-In</button>
+        <div class="Socials">Or Sign in with social platforms</div>
+      </footer>
+    </section>
   </div>
-  <div class="input-group">
-    <span class="input-group-text"></span>
-    <div class="form-floating">
-      <input type="text" class="form-fill" id="floatingInputGroup1" placeholder="Email">
-    </div>
+  </section>
   </div>
-  <div class="input-group">
-    <span class="input-group-text"></span>
-    <div class="form-floating">
-      <input type="password" class="form-fill" id="floatingInputGroup1" placeholder="Password"></section>
-    </div>
-  </div>
-  <footer>
-    <button class="Sign-In" type="submit">Sign-In</button>
-  </footer>
-</section>
 </body>
+
 </html>
